--- a/app.json
+++ b/app.json
@@ -9,7 +9,8 @@
     "newArchEnabled": true,
     "scheme": "fexx",
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.fexx"
     },
     "android": {
       "adaptiveIcon": {
